@@ -31,6 +31,7 @@ import org.opensearch.index.IndexService;
 import org.opensearch.index.IndexSettings;
 import org.opensearch.index.engine.SegmentsStats;
 import org.opensearch.index.shard.IndexShard;
+import org.opensearch.index.shard.IndexShardState;
 import org.opensearch.index.translog.TranslogStats;
 import org.opensearch.indices.IndicesService;
 import org.opensearch.monitor.jvm.JvmService;
@@ -68,6 +69,7 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
     private final String DATA_NODE_2 = "DATA_NODE_2";
     private final String WARM_NODE_1 = "WARM_NODE_1";
     private final String WARM_NODE_2 = "WARM_NODE_2";
+    private final String TEST_INDEX = "TEST_INDEX_1";
 
     @Before
     public void setUp() throws Exception {
@@ -163,7 +165,6 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
             .put(ForceMergeManagerSettings.AUTO_FORCE_MERGE_SCHEDULER_INTERVAL.getKey(), "1s")
             .put(ForceMergeManagerSettings.CPU_THRESHOLD_PERCENTAGE_FOR_AUTO_FORCE_MERGE.getKey(), 80)
             .put(ForceMergeManagerSettings.JVM_THRESHOLD_PERCENTAGE_FOR_AUTO_FORCE_MERGE.getKey(), 70)
-            .put(ForceMergeManagerSettings.FORCE_MERGE_THREADS_THRESHOLD_COUNT_FOR_AUTO_FORCE_MERGE.getKey(), 1)
             .build();
         when(clusterService.getClusterSettings()).thenReturn(new ClusterSettings(settings, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS));
         when(clusterService.getSettings()).thenReturn(settings);
@@ -244,31 +245,32 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
             osService, jvmService, indicesService, clusterService);
         autoForceMergeManager.start();
         IndexShard shard = mock(IndexShard.class);
-        ShardId shardId = new ShardId("test_index", "_na_", 0);
+        ShardId shardId = new ShardId(TEST_INDEX, "_na_", 0);
         when(shard.shardId()).thenReturn(shardId);
         TranslogStats translogStats = new TranslogStats(0, 0, 0, 0, TimeValue.timeValueSeconds(6).getMillis());
+        when(shard.state()).thenReturn(IndexShardState.STARTED);
         when(shard.translogStats()).thenReturn(translogStats);
         SegmentsStats segmentsStats = new SegmentsStats();
         segmentsStats.add(2);
         when(shard.segmentStats(false, false)).thenReturn(segmentsStats);
-        when(shard.indexSettings()).thenReturn(getNewIndexSettings("test_index"));
+        when(shard.indexSettings()).thenReturn(getNewIndexSettings(TEST_INDEX));
         assertTrue(autoForceMergeManager.getShardValidator().validate(shard).isAllowed());
     }
 
-    public void testShardValidatorWithNonWarmCandidateIndexSetting() {
+    public void testShardValidatorWithForbiddenAutoForceMergesSetting() {
         clusterSetup();
         AutoForceMergeManager autoForceMergeManager = new AutoForceMergeManager(threadPool,
             osService, jvmService, indicesService, clusterService);
         autoForceMergeManager.start();
         IndexShard shard = mock(IndexShard.class);
-        ShardId shardId = new ShardId("test_index", "_na_", 0);
+        ShardId shardId = new ShardId(TEST_INDEX, "_na_", 0);
         when(shard.shardId()).thenReturn(shardId);
         TranslogStats translogStats = new TranslogStats(0, 0, 0, 0, TimeValue.timeValueSeconds(5).getMillis());
         when(shard.translogStats()).thenReturn(translogStats);
         SegmentsStats segmentsStats = new SegmentsStats();
         segmentsStats.add(1);
-        IndexSettings indexSettings = getNewIndexSettings("test_index");
-        indexSettings.setIsWarmCandidateIndex(false);
+        IndexSettings indexSettings = getNewIndexSettings(TEST_INDEX);
+        indexSettings.setAllowAutoForcemerges(false);
         when(shard.indexSettings()).thenReturn(indexSettings);
         when(shard.segmentStats(false, false)).thenReturn(segmentsStats);
         assertEquals(false, autoForceMergeManager.getShardValidator().validate(shard).isAllowed());
@@ -280,13 +282,13 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
             osService, jvmService, indicesService, clusterService);
         autoForceMergeManager.start();
         IndexShard shard = mock(IndexShard.class);
-        ShardId shardId = new ShardId("test_index", "_na_", 0);
+        ShardId shardId = new ShardId(TEST_INDEX, "_na_", 0);
         when(shard.shardId()).thenReturn(shardId);
         TranslogStats translogStats = new TranslogStats(0, 0, 0, 0, TimeValue.timeValueSeconds(5).getMillis());
         when(shard.translogStats()).thenReturn(translogStats);
         SegmentsStats segmentsStats = new SegmentsStats();
         segmentsStats.add(1);
-        when(shard.indexSettings()).thenReturn(getNewIndexSettings("test_index"));
+        when(shard.indexSettings()).thenReturn(getNewIndexSettings(TEST_INDEX));
         when(shard.segmentStats(false, false)).thenReturn(segmentsStats);
         assertFalse(autoForceMergeManager.getShardValidator().validate(shard).isAllowed());
     }
@@ -297,13 +299,13 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
             osService, jvmService, indicesService, clusterService);
         autoForceMergeManager.start();
         IndexShard shard = mock(IndexShard.class);
-        ShardId shardId = new ShardId("test_index", "_na_", 0);
+        ShardId shardId = new ShardId(TEST_INDEX, "_na_", 0);
         when(shard.shardId()).thenReturn(shardId);
         TranslogStats translogStats = new TranslogStats(0, 0, 0, 0, TimeValue.timeValueSeconds(1).getMillis());
         when(shard.translogStats()).thenReturn(translogStats);
         SegmentsStats segmentsStats = new SegmentsStats();
         segmentsStats.add(2);
-        when(shard.indexSettings()).thenReturn(getNewIndexSettings("test_index"));
+        when(shard.indexSettings()).thenReturn(getNewIndexSettings(TEST_INDEX));
         when(shard.segmentStats(false, false)).thenReturn(segmentsStats);
         assertFalse(autoForceMergeManager.getShardValidator().validate(shard).isAllowed());
     }
@@ -370,20 +372,18 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
         when(threadPool.stats()).thenReturn(stats);
         IndexService indexService1 = mock(IndexService.class);
         IndexShard shard1 = getShard("Index1");
-        IndexShard shard2 = getShard("Index1");
-        List<IndexShard> indexShards1 = Arrays.asList(shard1, shard2);
-        when(indexService1.iterator()).thenReturn(indexShards1.iterator());
+        List<IndexShard> indexShards1 = List.of(shard1);
+        when(indexService1.spliterator()).thenReturn(indexShards1.spliterator());
         IndexService indexService2 = mock(IndexService.class);
-        IndexShard shard3 = getShard("Index2");
-        IndexShard shard4 = getShard("Index2");
-        List<IndexShard> indexShards2 = Arrays.asList(shard3, shard4);
-        when(indexService2.iterator()).thenReturn(indexShards2.iterator());
+        IndexShard shard2 = getShard("Index2");
+        List<IndexShard> indexShards2 = List.of(shard2);
+        when(indexService2.spliterator()).thenReturn(indexShards2.spliterator());
         List<IndexService> indexServices = Arrays.asList(indexService1, indexService2);
-        when(indicesService.iterator()).thenReturn(indexServices.iterator());
+        when(indicesService.spliterator()).thenReturn(indexServices.spliterator());
         when(shard1.indexSettings()).thenReturn(getNewIndexSettings("Index1"));
-        when(shard2.indexSettings()).thenReturn(getNewIndexSettings("Index1"));
-        when(shard3.indexSettings()).thenReturn(getNewIndexSettings("Index2"));
-        when(shard4.indexSettings()).thenReturn(getNewIndexSettings("Index2"));
+        when(shard1.state()).thenReturn(IndexShardState.STARTED);
+        when(shard2.indexSettings()).thenReturn(getNewIndexSettings("Index2"));
+        when(shard2.state()).thenReturn(IndexShardState.STARTED);
 
         AutoForceMergeManager autoForceMergeManager = new AutoForceMergeManager(threadPool,
             osService, jvmService, indicesService, clusterService);
@@ -397,11 +397,9 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
             .put(ForceMergeManagerSettings.MERGE_DELAY_BETWEEN_SHARDS_FOR_AUTO_FORCE_MERGE.getKey(), "1s")
             .build());
         autoForceMergeManager.getTask().runInternal();
-        Thread.sleep(TimeValue.timeValueSeconds(1).getMillis());
+        Thread.sleep(TimeValue.timeValueSeconds(3).getMillis());
         verify(shard1, atLeastOnce()).forceMerge(any());
         verify(shard2, atLeastOnce()).forceMerge(any());
-        verify(shard3, atLeastOnce()).forceMerge(any());
-        verify(shard4, atLeastOnce()).forceMerge(any());
 
         executorService.shutdown();
     }
@@ -448,7 +446,7 @@ public class AutoForceMergeManagerTests extends OpenSearchTestCase {
             .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
             .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, "1")
             .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, "0")
-            .put(IndexSettings.INDEX_IS_WARM_CANDIDATE_INDEX.getKey(), true).build()), Settings.EMPTY);
+            .put(IndexSettings.INDEX_ALLOW_AUTO_FORCE_MERGES.getKey(), true).build()), Settings.EMPTY);
     }
 }
 
